----------------------------------------------------

See the link:MIGRATION[] file for changes that introduced incompatibility to
older versions.

Current git version
-------------------

  * Tabbed window titles in the 'max' layout algorithm (controllable via the
    'tabbed_max' setting)
  * New decoration setting 'title_when' to control, when window titles and tabs
    are shown.
  * New decoration setting 'title_depth'.
  * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
  * New decoration attribute 'title_align'
  * New client attribute 'floating_effectively' and associated X11 properties
    'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
  * New 'foreach' command line flags: '--filter-name=', '--recursive', '--unique'
  * The 'spawn' command now prints an error message on exec failure
  * New read-only client attribute 'decoration_geometry'.
  * New attribute 'decorated' to disable window decorations
  * The cursor shape now indicates resize options.
  * New setting 'ellipsis'
  * Frames can be simultaneously resized in x and y direction with the mouse.
  * Bug fixes:
    - Update floating geometry if a client's size hints change

Release 0.9.3 on 2021-05-15
---------------------------

  * herbstclient prints error messages always on stderr and normal output
    always on stdout (before, both were printed to the same channel).
  * True transparency support for frame and client decorations (requires a
    compositor like picom, compton, or xcompmgr)
  * Colors contain alpha-values (format #RRGGBBAA)
  * Do not draw frame background behind clients (so for semi-transparent
    client decorations, one does not see the frame decoration behind but the
    wallpaper instead)
  * New command line option '--replace' for replacing an existing window manager.
  * New command 'list_clients'.
  * The frame attributes ('selection', 'algorithm', 'fraction', 'split_type')
    are now writable.