@@ -11,9 +11,10 @@ Current git version
     'tabbed_max' setting)
   * New decoration setting 'title_when' to control, when window titles and tabs
     are shown.
-  * New decoration setting 'title_depth'.
+  * New decoration settings 'title_depth' and 'title_align'.
+  * New decoration settings for configuring unselected tabs: 'tab_color',
+    'tab_outer_width', 'tab_outer_color', 'tab_title_color'
   * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
-  * New decoration attribute 'title_align'
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
   * New 'foreach' command line flags: '--filter-name=', '--recursive', '--unique'
